--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,27 +1,35 @@
 <footer class="footer">
   <div class="footer-container">
-    <div class="footer-about">
-      <h4 class="footer-h">Про нас</h4>
-      <p class="footer-p">Ми допомагаємо вам знайти кращих б'юті майстрів і салони краси у вашому місті</p>
+    <div class="level-block">
+      <div class="item-block">
+        <h4 class="footer-h">Про нас</h4>
+        <p class="footer-p">Ми допомагаємо вам знайти кращих б'юті майстрів і салони краси у вашому місті</p>
+      </div>
+      <div class="item-block">
+        <h4 class="footer-h">Корисні посилання</h4>
+        <ul>
+          <li><a href="{{environment.siteURL}}/home">Головна</a ></li>
+          <li><a href="{{environment.siteURL}}/discounts">Акції</a></li>
+          <li><a href="{{environment.siteURL}}/about">Про нас</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="footer-links">
-      <h4 class="footer-h">Корисні посилання</h4>
-      <ul>
-        <li><a href="http://localhost:4200/home">Головна</a ></li>
-        <li><a href="http://localhost:4200/about">Про нас</a></li>
-      </ul>
-    </div>
-    <div class="footer-contact">
-      <h4 class="footer-h">Контакти</h4>
-      <p class="footer-p">Телефон: <a class="contact-data" href="tel:+380953324255">+380 (95) 332-42-55</a></p>
-      <p class="footer-p">Пошта: <a class="contact-data" href="mailto:hiplace6@gmail.com">hiplace6@gmail.com</a></p>
 
-    </div>
-    <div class="footer-social">
-      <h4 class="footer-h">Ми у соцмережах</h4>
-      <a href="https://uk-ua.facebook.com/"><img src="./assets/image/icons/facebook.svg" alt="Facebook"></a>
-      <a href="https://www.instagram.com/"><img src="./assets/image/icons/instagram.svg" alt="Instagram"></a>
-      <a href="https://t.me/ivan_zhuravlev_1"><img src="./assets/image/icons/telegram.svg" alt="Telegram"></a>
+    <div class="level-block">
+      <div class="item-block">
+        <h4 class="footer-h">Контакти</h4>
+        <p class="footer-p">Телефон: <a class="contact-data" href="tel:+380953324255">+380 (95) 332-42-55</a></p>
+        <p class="footer-p">Пошта: <a class="contact-data" href="mailto:hiplace6@gmail.com">hiplace6@gmail.com</a></p>
+
+      </div>
+      <div class="item-block">
+        <h4 class="footer-h">Ми у соцмережах</h4>
+        <div class="items">
+          <a href="https://uk-ua.facebook.com/"><img src="./assets/image/icons/facebook.svg" alt="Facebook"></a>
+          <a href="https://www.instagram.com/"><img src="./assets/image/icons/instagram.svg" alt="Instagram"></a>
+          <a href="https://t.me/ivan_zhuravlev_1"><img src="./assets/image/icons/telegram.svg" alt="Telegram"></a>
+        </div>
+      </div>
     </div>
   </div>
   <div class="footer-bottom">
