--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,7 +1,7 @@
 <header class="header-wrapper">
   <div class="header-container">
     <div class="logo-container" (click)="goToHomePage()">
-      <img src="./assets/image/header/logo.png"
+      <img src="./assets/image/header/logo.svg"
            alt="Hi Place"
            class="logo-img">
     </div>
