--- a/src/app/components/user-register/second-step/second-step.component.html
+++ b/src/app/components/user-register/second-step/second-step.component.html
@@ -12,13 +12,28 @@
     </div>
 
     <div class="input-wrapper">
-      <input type="number" id="experience" [(ngModel)]="secondRegisterDto.experience" name="experience" step="0.1" class="form-input" placeholder=" ">
+      <input type="number"
+             id="experience"
+             [(ngModel)]="secondRegisterDto.experience"
+             name="experience"
+             step="0.1"
+             class="form-input"
+             placeholder=" "
+             min="0"
+             max="100" >
       <label for="experience" class="form-label">Скільки у вас років досвіду?</label>
     </div>
 
-
     <div class="input-wrapper">
-      <input type="number" id="discountWithPromo" [(ngModel)]="secondRegisterDto.discountWithPromo" name="discountWithPromo" value="0" class="form-input" placeholder=" ">
+      <input type="number"
+             id="discountWithPromo"
+             [(ngModel)]="secondRegisterDto.discountWithPromo"
+             name="discountWithPromo"
+             value="0"
+             class="form-input"
+             placeholder=" "
+             min="0"
+             max="100">
       <label for="discountWithPromo" class="form-label">Знижка за промокодом HiPlace</label>
     </div>
 
