--- a/src/styles.css
+++ b/src/styles.css
@@ -31,3 +31,21 @@ body {
 
 html, body { height: 100%; }
 /*body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }*/
+
+@media (max-width: 1700px) {
+  body {
+    max-width: 1300px;
+  }
+}
+
+@media (max-width: 1440px) {
+  body {
+    max-width: 1000px;
+  }
+}
+
+@media (max-width: 1100px) {
+  body {
+    max-width: 700px;
+  }
+}
