refactor: remove localhost from navigation links

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -8,9 +8,9 @@
       <div class="item-block">
         <h4 class="footer-h">Корисні посилання</h4>
         <ul>
-          <li><a href="{{environment.siteURL}}/home">Головна</a ></li>
-          <li><a href="{{environment.siteURL}}/discounts">Акції</a></li>
-          <li><a href="{{environment.siteURL}}/about">Про нас</a></li>
+          <li><a href="/home">Головна</a ></li>
+          <li><a href="/discounts">Акції</a></li>
+          <li><a href="/about">Про нас</a></li>
         </ul>
       </div>
     </div>
