feature: added client review

--- a/src/app/components/discount/add-discount/add-discount.component.html
+++ b/src/app/components/discount/add-discount/add-discount.component.html
@@ -41,7 +41,7 @@
                       required
                       class="form-input"
                       placeholder="Додайте опис, щоб люди зрозуміли, що ви пропонуєте. Не більше 400 символів"></textarea>
-            <p class="d-description-count">{{ discountRequest.description.length }} / 400 символов</p>
+            <p class="d-description-count">{{ discountRequest.description.length }} / 400 символів</p>
           </div>
 
           <div class="d-date-container">
