--- a/src/app/components/user-preview/user-preview.component.css
+++ b/src/app/components/user-preview/user-preview.component.css
@@ -70,8 +70,11 @@
   padding: 2px;
 }
 
-.feedback {
-
+.feedback button {
+  font-size: 16px;
+  color: blue;
+  background-color: transparent;
+  cursor: pointer;
 }
 
 .address-item {
